Refactor, Inventory and B2BConnections module
